# pygments-gui

./: .gitignore  README.md  pyproject.toml
pygments_gui/: util.py
pygments_gui/wx/: __init__.py  richtext.py
tests/: test_app.py  test_plugin.py
